Fixed Sign in button
Fixed the error of sign in and sign up button overlapping.

--- a/styles/style.css
+++ b/styles/style.css
@@ -88,6 +88,9 @@ img{
 
 }
 
+.leftbutton2{
+    right: 120px;
+}
 
 /*for mobile resolutions*/
 @media only screen and (max-width: 600px) {
